exports[`Sync Parametric Assertion Error Snapshots > \"{arraylike} 'to deep equal' / 'to deeply equal' {unknown}\" [arraylike-to-deep-equal-to-deeply-equal-unknown-3s3p] > should throw a consistent AssertionError [arraylike-to-deep-equal-to-deeply-equal-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{arraylike} 'to deep equal' / 'to deeply equal' {unknown}\\" failed:\\n\\u001b[32m- expected  - 1\\u001b[39m\\n\\u001b[31m+ actual    + 1\\u001b[39m\\n\\n\\u001b[2m  Array [\\u001b[22m\\n\\u001b[2m    1,\\u001b[22m\\n\\u001b[2m    2,\\u001b[22m\\n\\u001b[32m-   4,\\u001b[39m\\n\\u001b[31m+   3,\\u001b[39m\\n\\u001b[2m  ]\\u001b[22m",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": [
    1,
    2,
    3
  ],
  "expected": [
    1,
    2,
    4
  ],
  "diff": "simple",
  "assertionId": "arraylike-to-deep-equal-to-deeply-equal-unknown-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{arraylike} 'to satisfy' / 'to be like' {unknown}\" [arraylike-to-satisfy-to-be-like-unknown-3s3p] > should throw a consistent AssertionError [arraylike-to-satisfy-to-be-like-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{arraylike} 'to satisfy' / 'to be like' {unknown}\\" failed:\\n\\u001b[32m- expected  - 1\\u001b[39m\\n\\u001b[31m+ actual    + 1\\u001b[39m\\n\\n\\u001b[2m  Array [\\u001b[22m\\n\\u001b[2m    1,\\u001b[22m\\n\\u001b[2m    2,\\u001b[22m\\n\\u001b[32m-   4,\\u001b[39m\\n\\u001b[31m+   3,\\u001b[39m\\n\\u001b[2m  ]\\u001b[22m",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": [
    1,
    2,
    3
  ],
  "expected": [
    1,
    2,
    4
  ],
  "diff": "simple",
  "assertionId": "arraylike-to-satisfy-to-be-like-unknown-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{error} 'to have message matching' {regexp}\" [error-to-have-message-matching-regexp-3s3p] > should throw a consistent AssertionError [error-to-have-message-matching-regexp-3s3p] <snapshot> 1`] = `
{
  "message": "Expected error message \\"wrong message\\" to match /expected/",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "error-to-have-message-matching-regexp-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{error} 'to have message' {string}\" [error-to-have-message-string-3s3p] > should throw a consistent AssertionError [error-to-have-message-string-3s3p] <snapshot> 1`] = `
{
  "message": "Expected error message \\"wrong message\\" to equal \\"expected message\\"",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "wrong message",
  "expected": "expected message",
  "diff": "simple",
  "assertionId": "error-to-have-message-string-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{function} 'to have arity' {nonnegative-integer}\" [function-to-have-arity-nonnegative_integer-3s3p] > should throw a consistent AssertionError [function-to-have-arity-nonnegative_integer-3s3p] <snapshot> 1`] = `
{
  "message": "Expected function to have arity 3, but it has arity 2",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 2,
  "expected": 3,
  "diff": "simple",
  "assertionId": "function-to-have-arity-nonnegative_integer-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{function} 'to throw a' / 'to throw an' {constructible} 'satisfying' {unknown}\" [function-to-throw-a-to-throw-an-constructible-satisfying-unknown-5s5p] > should throw a consistent AssertionError [function-to-throw-a-to-throw-an-constructible-satisfying-unknown-5s5p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{function} 'to throw a' / 'to throw an' {constructible} 'satisfying' {unknown}\\" failed:\\n\\u001b[32m- expected  - 3\\u001b[39m\\n\\u001b[31m+ actual    + 1\\u001b[39m\\n\\n\\u001b[32m- Object {\\u001b[39m\\n\\u001b[32m-   \\"message\\": \\"expected message\\",\\u001b[39m\\n\\u001b[32m- }\\u001b[39m\\n\\u001b[31m+ [Error: wrong message]\\u001b[39m",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {
    "message": "wrong message"
  },
  "expected": {
    "message": "expected message"
  },
  "diff": "simple",
  "assertionId": "function-to-throw-a-to-throw-an-constructible-satisfying-unknown-5s5p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{function} 'to throw a' / 'to throw an' {constructible}\" [function-to-throw-a-to-throw-an-constructible-3s3p] > should throw a consistent AssertionError [function-to-throw-a-to-throw-an-constructible-3s3p] <snapshot> 1`] = `
{
  "message": "Expected function to throw with an instance of TypeError, but it threw with a Error",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "Error",
  "expected": "TypeError",
  "diff": "simple",
  "assertionId": "function-to-throw-a-to-throw-an-constructible-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{function} 'to throw' / 'to throw error satisfying' {unknown}\" [function-to-throw-to-throw-error-satisfying-unknown-3s3p] > should throw a consistent AssertionError [function-to-throw-to-throw-error-satisfying-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Invalid arguments. No assertion matched: [ [Function: fn], 'to throw matching', /expected/ ]",
  "name": "UnknownAssertionError",
  "args": [
    null,
    "to throw matching",
    {}
  ],
  "code": "ERR_BUPKIS_UNKNOWN_ASSERTION"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{function} 'to throw'\" [function-to-throw-2s2p] > should throw a consistent AssertionError [function-to-throw-2s2p] <snapshot> 1`] = `
{
  "message": "Expected function to throw, but it fulfilled with 'no error'",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "function-to-throw-2s2p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{number} 'to be close to' {number} {number?}\" [number-to-be-close-to-number-number-4s4p] > should throw a consistent AssertionError [number-to-be-close-to-number-number-4s4p] <snapshot> 1`] = `
{
  "message": "Expected 10 to be close to 5 (within 2), but difference was 5",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 10,
  "expected": 5,
  "diff": "simple",
  "assertionId": "number-to-be-close-to-number-number-4s4p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{number} 'to be greater than or equal to' / 'to be at least' / 'to be gte' {number}\" [number-to-be-greater-than-or-equal-to-to-be-at-least-to-be-gte-number-3s3p] > should throw a consistent AssertionError [number-to-be-greater-than-or-equal-to-to-be-at-least-to-be-gte-number-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{number} 'to be greater than or equal to' / 'to be at least' / 'to be gte' {number}\\" failed:\\n\\u001b[32m- expected  - 1\\u001b[39m\\n\\u001b[31m+ actual    + 1\\u001b[39m\\n\\n\\u001b[32m- 10\\u001b[39m\\n\\u001b[31m+ 5\\u001b[39m",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 5,
  "expected": 10,
  "diff": "simple",
  "assertionId": "number-to-be-greater-than-or-equal-to-to-be-at-least-to-be-gte-number-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{number} 'to be greater than' {number}\" [number-to-be-greater-than-number-3s3p] > should throw a consistent AssertionError [number-to-be-greater-than-number-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{number} 'to be greater than' {number}\\" failed:\\n\\u001b[32m- expected  - 1\\u001b[39m\\n\\u001b[31m+ actual    + 1\\u001b[39m\\n\\n\\u001b[32m- 10\\u001b[39m\\n\\u001b[31m+ 5\\u001b[39m",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 5,
  "expected": 10,
  "diff": "simple",
  "assertionId": "number-to-be-greater-than-number-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{number} 'to be less than or equal to' / 'to be at most' / 'to be lte' {number}\" [number-to-be-less-than-or-equal-to-to-be-at-most-to-be-lte-number-3s3p] > should throw a consistent AssertionError [number-to-be-less-than-or-equal-to-to-be-at-most-to-be-lte-number-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{number} 'to be less than or equal to' / 'to be at most' / 'to be lte' {number}\\" failed:\\n\\u001b[32m- expected  - 1\\u001b[39m\\n\\u001b[31m+ actual    + 1\\u001b[39m\\n\\n\\u001b[32m- 5\\u001b[39m\\n\\u001b[31m+ 10\\u001b[39m",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 10,
  "expected": 5,
  "diff": "simple",
  "assertionId": "number-to-be-less-than-or-equal-to-to-be-at-most-to-be-lte-number-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{number} 'to be less than' / 'to be lt' {number}\" [number-to-be-less-than-to-be-lt-number-3s3p] > should throw a consistent AssertionError [number-to-be-less-than-to-be-lt-number-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{number} 'to be less than' / 'to be lt' {number}\\" failed:\\n\\u001b[32m- expected  - 1\\u001b[39m\\n\\u001b[31m+ actual    + 1\\u001b[39m\\n\\n\\u001b[32m- 5\\u001b[39m\\n\\u001b[31m+ 10\\u001b[39m",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 10,
  "expected": 5,
  "diff": "simple",
  "assertionId": "number-to-be-less-than-to-be-lt-number-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{number} 'to be within' / 'to be between' {number} {number}\" [number-to-be-within-to-be-between-number-number-4s4p] > should throw a consistent AssertionError [number-to-be-within-to-be-between-number-number-4s4p] <snapshot> 1`] = `
{
  "message": "Invalid arguments. No assertion matched: [ 15, 'to be within range', [ 1, 10 ] ]",
  "name": "UnknownAssertionError",
  "args": [
    15,
    "to be within range",
    [
      1,
      10
    ]
  ],
  "code": "ERR_BUPKIS_UNKNOWN_ASSERTION"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{object!} 'to satisfy' / 'to be like' / 'satisfies' {unknown}\" [object-to-satisfy-to-be-like-satisfies-unknown-3s3p] > should throw a consistent AssertionError [object-to-satisfy-to-be-like-satisfies-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{object!} 'to satisfy' / 'to be like' / 'satisfies' {unknown}\\" failed:\\n\\u001b[32m- expected  - 1\\u001b[39m\\n\\u001b[31m+ actual    + 1\\u001b[39m\\n\\n\\u001b[2m  Object {\\u001b[22m\\n\\u001b[2m    \\"a\\": 1,\\u001b[22m\\n\\u001b[32m-   \\"b\\": 3,\\u001b[39m\\n\\u001b[31m+   \\"b\\": 2,\\u001b[39m\\n\\u001b[2m  }\\u001b[22m",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {
    "a": 1,
    "b": 2
  },
  "expected": {
    "a": 1,
    "b": 3
  },
  "diff": "simple",
  "assertionId": "object-to-satisfy-to-be-like-satisfies-unknown-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{record} 'to deep equal' / 'to deeply equal' {unknown}\" [record-to-deep-equal-to-deeply-equal-unknown-3s3p] > should throw a consistent AssertionError [record-to-deep-equal-to-deeply-equal-unknown-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{record} 'to deep equal' / 'to deeply equal' {unknown}\\" failed:\\n\\u001b[32m- expected  - 1\\u001b[39m\\n\\u001b[31m+ actual    + 1\\u001b[39m\\n\\n\\u001b[2m  Object {\\u001b[22m\\n\\u001b[2m    \\"a\\": 1,\\u001b[22m\\n\\u001b[32m-   \\"b\\": 3,\\u001b[39m\\n\\u001b[31m+   \\"b\\": 2,\\u001b[39m\\n\\u001b[2m  }\\u001b[22m",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {
    "a": 1,
    "b": 2
  },
  "expected": {
    "a": 1,
    "b": 3
  },
  "diff": "simple",
  "assertionId": "record-to-deep-equal-to-deeply-equal-unknown-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{string} 'includes' / 'contains' / 'to include' / 'to contain' {string}\" [string-includes-contains-to-include-to-contain-string-3s3p] > should throw a consistent AssertionError [string-includes-contains-to-include-to-contain-string-3s3p] <snapshot> 1`] = `
{
  "message": "Expected \\"hello world\\" to include \\"universe\\"",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "string-includes-contains-to-include-to-contain-string-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{string} 'to be greater than or equal to' {string}\" [string-to-be-greater-than-or-equal-to-string-3s3p] > should throw a consistent AssertionError [string-to-be-greater-than-or-equal-to-string-3s3p] <snapshot> 1`] = `
{
  "message": "Expected \\"apple\\" to be greater than or equal to \\"zebra\\"",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "string-to-be-greater-than-or-equal-to-string-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{string} 'to be greater than' {string}\" [string-to-be-greater-than-string-3s3p] > should throw a consistent AssertionError [string-to-be-greater-than-string-3s3p] <snapshot> 1`] = `
{
  "message": "Expected \\"apple\\" to be greater than \\"zebra\\"",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "string-to-be-greater-than-string-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{string} 'to be less than or equal to' {string}\" [string-to-be-less-than-or-equal-to-string-3s3p] > should throw a consistent AssertionError [string-to-be-less-than-or-equal-to-string-3s3p] <snapshot> 1`] = `
{
  "message": "Expected \\"zebra\\" to be less than or equal to \\"apple\\"",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "string-to-be-less-than-or-equal-to-string-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{string} 'to be less than' {string}\" [string-to-be-less-than-string-3s3p] > should throw a consistent AssertionError [string-to-be-less-than-string-3s3p] <snapshot> 1`] = `
{
  "message": "Expected \\"zebra\\" to be less than \\"apple\\"",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "string-to-be-less-than-string-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{string} 'to begin with' / 'to start with' {string}\" [string-to-begin-with-to-start-with-string-3s3p] > should throw a consistent AssertionError [string-to-begin-with-to-start-with-string-3s3p] <snapshot> 1`] = `
{
  "message": "Expected \\"hello world\\" to begin with \\"goodbye\\"",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "string-to-begin-with-to-start-with-string-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{string} 'to end with' {string}\" [string-to-end-with-string-3s3p] > should throw a consistent AssertionError [string-to-end-with-string-3s3p] <snapshot> 1`] = `
{
  "message": "Expected \\"hello world\\" to end with \\"universe\\"",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "string-to-end-with-string-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{string} 'to match' {regexp}\" [string-to-match-regexp-3s3p] > should throw a consistent AssertionError [string-to-match-regexp-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{string} 'to match' {regexp}\\" failed for arguments: [ 'hello world', 'to match', /universe/ ]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "diff": "simple",
  "assertionId": "string-to-match-regexp-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{unknown} 'to be a' / 'to be an' / 'to have type' {string / number / boolean / undefined / null / BigInt / bigint / Symbol / symbol / Object / object / Function / function / Array / array / Date / date / Map / map / Set / set / WeakMap / weakmap / WeakSet / weakset / RegExp / regexp / Promise / promise / Error / error / WeakRef / weakref}\" [unknown-to-be-a-to-be-an-to-have-type-string-number-boolean-undefined-null-bigint-bigint-symbol-symbol-object-object-function-function-array-array-date-date-map-map-set-set-weakmap-weakmap-weakset-weakset-regexp-regexp-promise-promise-error-error-weakref-weakref-3s3p] > should throw a consistent AssertionError [unknown-to-be-a-to-be-an-to-have-type-string-number-boolean-undefined-null-bigint-bigint-symbol-symbol-object-object-function-function-array-array-date-date-map-map-set-set-weakmap-weakmap-weakset-weakset-regexp-regexp-promise-promise-error-error-weakref-weakref-3s3p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be a' / 'to be an' / 'to have type' {string / number / boolean / undefined / null / BigInt / bigint / Symbol / symbol / Object / object / Function / function / Array / array / Date / date / Map / map / Set / set / WeakMap / weakmap / WeakSet / weakset / RegExp / regexp / Promise / promise / Error / error / WeakRef / weakref}\\" failed:\\n  Comparing two different types of values. Expected \\u001b[32mnumber\\u001b[39m but received \\u001b[31mstring\\u001b[39m.",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "expected": 0,
  "diff": "simple",
  "assertionId": "unknown-to-be-a-to-be-an-to-have-type-string-number-boolean-undefined-null-bigint-bigint-symbol-symbol-object-object-function-function-array-array-date-date-map-map-set-set-weakmap-weakmap-weakset-weakset-regexp-regexp-promise-promise-error-error-weakref-weakref-3s3p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{unknown} 'to be an instance of' / 'to be a' / 'to be an' {constructible}\" [unknown-to-be-an-instance-of-to-be-a-to-be-an-constructible-3s2p] > should throw a consistent AssertionError [unknown-to-be-an-instance-of-to-be-a-to-be-an-constructible-3s2p] <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to be an instance of' / 'to be a' / 'to be an' {constructible}\\" failed:\\nInput not instance of Number",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": "hello",
  "diff": "simple",
  "assertionId": "unknown-to-be-an-instance-of-to-be-a-to-be-an-constructible-3s2p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{unknown} 'to be one of' {unknown-array}\" [unknown-to-be-one-of-unknown_array-3s2p] > should throw a consistent AssertionError [unknown-to-be-one-of-unknown_array-3s2p] <snapshot> 1`] = `
{
  "message": "Expected 5 to be one of [1, 2, 3]",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": 5,
  "expected": [
    1,
    2,
    3
  ],
  "diff": "simple",
  "assertionId": "unknown-to-be-one-of-unknown_array-3s2p"
}
`;

exports[`Sync Parametric Assertion Error Snapshots > \"{unknown} 'to be' / 'to equal' / 'equals' / 'is' / 'is equal to' / 'to strictly equal' / 'is strictly equal to' {unknown}\" [unknown-to-be-to-equal-equals-is-is-equal-to-to-strictly-equal-is-strictly-equal-to-unknown-3s2p] > should throw a consistent AssertionError [unknown-to-be-to-equal-equals-is-is-equal-to-to-strictly-equal-is-strictly-equal-to-unknown-3s2p] <snapshot> 1`] = `
{
  "message": "Expected {} to equal {}",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {},
  "expected": {},
  "diff": "simple",
  "assertionId": "unknown-to-be-to-equal-equals-is-is-equal-to-to-strictly-equal-is-strictly-equal-to-unknown-3s2p"
}
`;
